[gd_scene load_steps=12 format=3 uid="uid://dvj3i8d0shu4t"]

[ext_resource type="Script" uid="uid://c12b20fqaox6p" path="res://scripts/boss/cactus_fruit.gd" id="1_b6cq1"]
[ext_resource type="Texture2D" uid="uid://b6aeivbligojl" path="res://sprites/boss/cactus-fruit.png" id="1_euyhb"]
[ext_resource type="Texture2D" uid="uid://dyti1wkf0642o" path="res://sprites/boss/fruitparticle.png" id="2_oty1q"]
[ext_resource type="PackedScene" uid="uid://bivpy44qgcvdq" path="res://scenes/bullets/enemy-bullet.tscn" id="2_vv31p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_euyhb"]
atlas = ExtResource("1_euyhb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_b6cq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euyhb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2spu5"]

[sub_resource type="Gradient" id="Gradient_b6cq1"]
offsets = PackedFloat32Array(0.145833, 0.260417)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_vv31p"]
resource_name = "explode"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.96667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kguko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kguko"]
_data = {
&"RESET": SubResource("Animation_kguko"),
&"explode": SubResource("Animation_vv31p")
}

[node name="CactusFruit" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.5
script = ExtResource("1_b6cq1")
bulletScene = ExtResource("2_vv31p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b6cq1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2spu5")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
texture = ExtResource("2_oty1q")
lifetime = 1.03
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 73.89
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 700)
initial_velocity_min = 347.22
initial_velocity_max = 347.22
color_ramp = SubResource("Gradient_b6cq1")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SecondWindTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kguko")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SecondWindTimer" to="." method="_on_second_wind_timer_timeout"]
